# sweet

./: AGENTS.md  Cargo.toml  README.md
.agents/commands/: pr.md  review-pr.md
.github/workflows/: ci.yml
crates/sweet-agent/src/: memory.rs
crates/sweet-core/src/: sandbox.rs  session.rs
crates/sweet-llm/src/: lib.rs  schema.rs  sse.rs  util.rs
crates/sweet-llm/src/anthropic/: mod.rs
crates/sweet-llm/src/gemini/: mod.rs  wire.rs
crates/sweet-llm/src/openai/: mod.rs
crates/sweet-memory/src/: sqlite.rs  sqlite_vec.rs
crates/sweet-memory/tests/: sqlite_vec_store.rs
crates/sweet-session/src/: sqlite.rs
scripts/: check.sh
