[workspace]
members = [
    "crates/sweet-core",
    "crates/sweet-tool-derive",
    "crates/sweet-tools",
    "crates/sweet-llm",
    "crates/sweet-agent",
    "crates/sweet-session",
    "crates/sweet-sandbox",
    "crates/sweet-mcp",
    "crates/sweet-mcp-mock-server",
]
resolver = "2"

[workspace.package]
version = "0.3.3"
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "query"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1"
wiremock = "0.6"
serial_test = "3"
schemars = "0.8"
chrono = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["derive"] }
tempfile = "3"
axum = "0.8"
uuid = { version = "1", features = ["v7", "serde"] }
rusqlite = { version = "0.34", features = ["bundled"] }
ignore = "0.4"
regex = "1"
globset = "0.4"
rmcp = { version = "1.7", default-features = false }
http = "1"
dunce = "1"
which = "7"
base64 = "0.22"
dirs = "6"
